--- a/app/src/main/res/layout/activity_sing_in.xml
+++ b/app/src/main/res/layout/activity_sing_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".SingInActivity">
+    tools:context=".View.SingInActivity">
 
     <LinearLayout
         android:orientation="vertical"
