Se implemento el mvp para el registro de usuario v3

--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -60,7 +60,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="SIGN UP"/>
+                android:text="Regístrate"/>
 
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_button"
