--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         <Button
             android:background="@drawable/btn_signin"
             android:id="@+id/btnSignUp"
-            android:text="Sign Up"
+            android:text="Regístrate"
             android:textColor="#FFF"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -44,7 +44,7 @@
         <Button
             android:background="@drawable/btn_signup"
             android:id="@+id/btnSignIn"
-            android:text="Sign In"
+            android:text="Iniciar Sección"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_margin="8dp"
