--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="colorAccent">#39796b</color>
 
     <color name="colorbtnSignUp">#39796b</color>
-    <color name="texView"></color>
     <color name="colorbtnSignActive">#A9d440</color>
+    //color the menu
+    <color name="overlayBackground">#7f333639</color>
+    <color name="overlayActionBar">#0e0d0e</color>
 </resources>
