modulo registro login

--- a/app/src/main/res/layout/activity_sing_in.xml
+++ b/app/src/main/res/layout/activity_sing_in.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,6 +19,7 @@
             android:layout_height="270dp">
 
             <ImageView
+                android:id="@+id/hola"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="250dp"
@@ -52,15 +54,15 @@
                 android:layout_gravity="center"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content" />
+
             <Button
-                android:id="@+id/btnLogerSignIn"
-                android:background="@color/common_google_signin_btn_text_dark_default"
-                android:layout_marginTop="20dp"
+                android:id="@+id/btnlogin"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:onClick="LoginUsuarios"
-                android:text="INICIAR SESIÓN"/>
+                android:layout_marginTop="20dp"
+                android:background="@color/common_google_signin_btn_text_dark_default"
+                android:text="INICIAR SESIÓN" />
 
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_button"
@@ -77,6 +79,7 @@
             android:layout_height="20dp">
             <TextView
                 android:id="@+id/btnCreatAcco_id"
+                android:onClick="registrar"
                 android:layout_marginLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
