--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,10 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding ="5dp"
-
     android:orientation="vertical"
-
-
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
     tools:context=".View.HomeActivity"
     >
@@ -32,10 +29,9 @@
 
         <LinearLayout
             android:paddingTop="15dp"
-            android:layout_width="wrap_content"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -56,7 +52,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:ems="10"
-                        android:hint="nombre"
+                        android:hint="Nombre"
                         android:inputType="textPersonName" />
 
                 </android.support.design.widget.TextInputLayout>
