--- a/app/src/main/res/layout/location_maps_fragment.xml
+++ b/app/src/main/res/layout/location_maps_fragment.xml
@@ -20,15 +20,14 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/create"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="54dp"
+            android:layout_marginTop="10dp"
             android:clickable="true"
             android:src="@drawable/ic_add_black_24dp"
-            app:backgroundTint="#07ed22" />
-
+            app:backgroundTint="#f2f9f3" />
 
     </RelativeLayout>
 
