--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding ="5dp"
+
     android:orientation="vertical"
+
+
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
     tools:context=".View.HomeActivity"
     >
@@ -29,21 +32,27 @@
 
         <LinearLayout
             android:paddingTop="15dp"
-            android:layout_width="370dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
+
                     android:gravity="center_horizontal">
+
 
                     <EditText
                         android:id="@+id/nombre"
@@ -51,13 +60,14 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
+                        android:drawableStart="@drawable/ic_store_black_24dp"
                         android:ems="10"
-                        android:hint="Nombre"
+                        android:hint="nombre"
                         android:inputType="textPersonName" />
 
                 </android.support.design.widget.TextInputLayout>
 
-
+                </RelativeLayout>
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -70,6 +80,8 @@
                         android:layout_width="282dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
+
+                        android:drawableStart="@drawable/ic_directions_black_24dp"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="166dp"
                         android:ems="10"
@@ -92,6 +104,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="166dp"
                         android:ems="10"
+                        android:drawableStart="@drawable/ic_phone_black_24dp"
 
                         android:hint="Telefono"
                         android:inputType="number" />
@@ -105,8 +118,29 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+
                     android:layout_weight="1"
                      />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:id="@+id/lugares"
+                    android:textSize="15dp"
+                    android:drawableRight="@drawable/ic_fast_forward_black_24dp"
+                    android:text="Selecionar dias y horarios"
+                    android:layout_height="wrap_content" />
+
+                <EditText
+                    android:id="@+id/horarios"
+                    android:layout_width="282dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:drawableStart="@drawable/ic_event_black_24dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="2dp"
+                    android:ems="10"
+                    android:hint="Seleccione Horario"
+                  />
+
 
             </LinearLayout>
 
@@ -117,7 +151,8 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/efecha"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/etime1"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
@@ -125,21 +160,23 @@
                     android:clickable="true"
                     android:ems="10"
                     android:focusable="false"
-                    android:hint="Fecha"
+                    android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
+                    android:hint="Abrir"
                     android:inputType="datetime"
-
                     android:paddingLeft="10dp" />
                 <EditText
-                    android:id="@+id/ehora"
-                    android:layout_width="100dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/etime2"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="20dp"
                     android:clickable="true"
                     android:ems="10"
+                    android:drawableStart="@drawable/ic_close_black_24dp"
                     android:focusable="false"
-                    android:hint="Hora"
+                    android:hint="Cerrar"
                     android:inputType="time"
                     android:paddingLeft="10dp" />
 
@@ -147,81 +184,111 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fecha"
-                    android:id="@+id/bfecha"
-                    android:textColor="#111111"
-                    android:onClick="regisfecha"
-                    android:layout_alignParentTop="true"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    />
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hora"
-                    android:onClick="registime"
-                    android:textColor="#111111"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:id="@+id/bhora"
-                    android:layout_below="@+id/bfecha"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    />
 
+             <TextView
+                 android:layout_marginTop="5dp"
+                 android:layout_marginLeft="10dp"
+                 android:id="@+id/Fecha"
+                 android:textStyle="bold"
+                 android:textColor="#111111"
+                 android:text="Fecha de Inaguracion:"
+                 android:layout_width="280dp"
+                 android:layout_height="match_parent" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawableStart="@drawable/ic_date_range_black_24dp"
+                        android:id="@+id/tvDate"
+                        android:layout_centerHorizontal="true"
+                       />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:textStyle="bold"
+                    android:textColor="#111111"
+                    android:text="Sitio Web:"
+                    android:layout_width="280dp"
+                    android:layout_height="match_parent" />
+
+                <EditText
+                    android:id="@+id/web"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="https://"
+                    android:drawableStart="@drawable/ic_web_black_24dp"
+                    android:textStyle="bold"
+                    />
             </LinearLayout>
-
-
-
-
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-
                 android:orientation="vertical">
-
-
-
-                <Switch
-                    android:id="@+id/lugar"
-
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:text="Seleccionar Lugar" />
-
-                <Switch
+            <Switch
+                android:layout_marginTop="10dp"
                     android:id="@+id/selectlugar"
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:text="Mi Ubicación "
                     android:textColor="#111111" />
 
+
+            <ImageView
+                 android:id="@+id/idimagen"
+                android:layout_marginTop="10dp"
+                android:layout_width="100dp"
+                android:src="@drawable/img_base"
+                android:layout_height="100dp" />
+        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/createRes"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="Registrar"
+                    android:textColor="#ffffff" />
+                <Button
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+
+                    android:id="@+id/tomarfoto"
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:onClick="cargarimagen"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="Tomar Foto"
+                    android:textColor="#ffffff" />
+
+
             </LinearLayout>
 
-            <Button
-                android:id="@+id/createRes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="@color/colorPrimary"
-                android:text="Registrar"
-                android:textColor="#111111" />
+
+
+
+
+
+
 
         </LinearLayout>
     </ScrollView>
+
+
+
 
 </LinearLayout>
 
