--- a/app/src/main/res/layout/activity_selec_ubicacion.xml
+++ b/app/src/main/res/layout/activity_selec_ubicacion.xml
@@ -31,9 +31,15 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="35dp"
             android:layout_marginStart="12dp"
+            android:onClick="atras"
             android:clickable="true"
-            android:src="@drawable/ic_arrow_back_black_24dp"
+            android:src="@drawable/ic_fast_rewind_black_24dp"
+
             app:backgroundTint="#111111" />
+
+
+
+
 
 
     </RelativeLayout>
