--- a/app/src/main/res/layout/blog_row.xml
+++ b/app/src/main/res/layout/blog_row.xml
@@ -12,30 +12,52 @@
         android:layout_width="match_parent"
         android:layout_height="248dp"
         android:orientation="vertical">
-        <ImageView
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            android:id="@+id/postImgen"/>
-        <TextView
-            android:id="@+id/post_nombreRest"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="nombreRest"
-            android:textSize="18dp"
-            android:textColor="#0a0909"/>
-        <TextView
-            android:id="@+id/post_categoria"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Categoria"
-            android:textColor="#0a0909"/>
-        <TextView
-            android:id="@+id/post_direccion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Direccion"
-            android:textColor="#0a0909"/>
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:scaleType="centerCrop"
+                android:id="@+id/postImgen"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|bottom"
+                android:background="@color/overlayBackground"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_marginLeft="3dp"
+                    android:id="@+id/post_nombreRest"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="nombreRest"
+                    android:textSize="18dp"
+                    android:textColor="#FFF"/>
+                <TextView
+                    android:layout_marginLeft="3dp"
+                    android:id="@+id/post_categoria"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Categoria"
+                    android:textColor="#FFF"/>
+                <TextView
+                    android:layout_marginLeft="3dp"
+                    android:id="@+id/post_direccion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Direccion"
+                    android:textColor="#FFF"/>
+
+            </LinearLayout>
+
+        </FrameLayout>
 
     </LinearLayout>
 
