--- a/app/src/main/res/layout/content_principal2.xml
+++ b/app/src/main/res/layout/content_principal2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".View.Main2Activity"
-    tools:showIn="@layout/activity_main2">
+    tools:context=".View.Principal2Activity"
+    tools:showIn="@layout/app_bar_principal2">
 
 </android.support.constraint.ConstraintLayout>
