--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -15,22 +15,58 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="270dp">
+            android:layout_height="160dp">
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="REGISTER"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#fff"
+                android:textSize="20dp"/>
 
             <ImageView
+                android:id="@+id/signupFotoPerfil"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_width="220dp"
-                android:layout_height="220dp"
-                android:src="@drawable/logo_eat_it"/>
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/iconoperfi"/>
+
         </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:weightSum="3"
-            android:layout_height="300dp">
+            android:layout_height="390dp">
+
             <EditText
+                android:id="@+id/signupNombre"
+                android:drawableStart="@drawable/ic_person_black_24dp"
+                android:textColor="#fff"
+                android:textColorHint="@color/lightgray"
+                android:layout_gravity="center"
+                android:hint="Nombre Completo"
+                android:padding="7dp"
+                android:inputType="text"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:layout_marginTop="25dp"
+                android:id="@+id/signupApellido"
+                android:drawableStart="@drawable/ic_person_black_24dp"
+                android:textColor="#fff"
+                android:textColorHint="@color/lightgray"
+                android:layout_gravity="center"
+                android:hint="Apellido completo"
+                android:padding="7dp"
+                android:inputType="text"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:layout_marginTop="25dp"
                 android:id="@+id/signupUser"
                 android:drawableStart="@drawable/ic_person_black_24dp"
                 android:textColor="#fff"
@@ -68,23 +104,14 @@
 
             <Button
                 android:id="@+id/btnRegis"
-
                 android:background="@color/common_google_signin_btn_text_dark_default"
                 android:layout_marginTop="20dp"
                 android:layout_width="300dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:text="Regístrate"/>
 
-            <com.facebook.login.widget.LoginButton
-                android:id="@+id/login_button"
-                android:layout_width="300dp"
-                android:layout_weight="1"
-                android:layout_height="500dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="40dp" />
         </LinearLayout>
 
     </LinearLayout>
