--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,15 @@
     tools:context=".View.MainActivity">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/logo_eat_it"
-            android:layout_width="200dp"
-            android:layout_height="200dp"/>
+    android:layout_marginLeft="78dp"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:layout_marginLeft="20dp"
+        android:src="@drawable/logo_eat_it"
+        android:layout_width="150dp"
+        android:layout_height="150dp"/>
         <TextView
             android:gravity="center"
             android:text="@string/Slogan"
@@ -23,32 +24,70 @@
             android:textColor="#FFF"
             android:layout_width="200dp"
             android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="80dp" />
+
+        <Button
+            android:id="@+id/btnIngresFreed"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorbtnSignUp"
+            android:textColor="#fafafa"
+            android:text="Ingrese como invitado" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:weightSum="2"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button
-            android:background="@drawable/btn_signin"
-            android:id="@+id/btnSignUp"
-            android:text="Regístrate"
-            android:textColor="#FFF"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_margin="8dp"
-            android:layout_height="match_parent" />
-        <Button
-            android:background="@drawable/btn_signup"
-            android:id="@+id/btnSignIn"
-            android:text="Iniciar Sección"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_margin="8dp"
-            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/id_tenerCuenta"
+            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="290dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tienes una cuenta?"
+            android:textSize="16dp"
+            android:textColor="#fff"/>
+
+        <TextView
+            android:id="@+id/id_newCuesta"
+            android:drawableStart="@drawable/ic_person_add_black_24dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Crea una cuenta"
+            android:layout_marginTop="12dp"
+            android:textSize="16dp"
+            android:textColor="#fff"/>
+        <TextView
+            android:id="@+id/id_help"
+            android:drawableStart="@drawable/ic_help_outline_black_24dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Help?"
+            android:textSize="16dp"
+            android:textColor="#fff"/>
 
     </LinearLayout>
 
