--- a/app/src/main/res/layout/blog_row.xml
+++ b/app/src/main/res/layout/blog_row.xml
@@ -40,13 +40,29 @@
                     android:text="nombreRest"
                     android:textSize="18dp"
                     android:textColor="#FFF"/>
-                <TextView
-                    android:layout_marginLeft="3dp"
-                    android:id="@+id/post_categoria"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Categoria"
-                    android:textColor="#FFF"/>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_marginLeft="3dp"
+                        android:id="@+id/post_categoria"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Categoria"
+                        android:textColor="#FFF"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/ico_favorite"
+                            android:drawableStart="@drawable/ic_favorite_border_black_24dp"
+                            android:layout_marginLeft="170dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+
+                </LinearLayout>
                 <TextView
                     android:layout_marginLeft="3dp"
                     android:id="@+id/post_direccion"
