--- a/app/src/main/res/layout/nav_header_principal.xml
+++ b/app/src/main/res/layout/nav_header_principal.xml
@@ -13,19 +13,22 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
+        android:layout_marginLeft="80dp"
         android:id="@+id/imageView"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/iconoperfi" />
 
     <TextView
+        android:layout_marginLeft="80dp"
         android:id="@+id/nombreUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="kningdz_20@hotmail.com"
+        android:text="Eat Guest"
+        android:textSize="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </LinearLayout>
