--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,8 +8,6 @@
     android:padding ="5dp"
 
     android:orientation="vertical"
-
-
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
     tools:context=".View.HomeActivity"
     >
@@ -118,17 +116,8 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
-
                     android:layout_weight="1"
                      />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:id="@+id/lugares"
-                    android:textSize="15dp"
-                    android:drawableRight="@drawable/ic_fast_forward_black_24dp"
-                    android:text="Selecionar dias y horarios"
-                    android:layout_height="wrap_content" />
-
                 <EditText
                     android:id="@+id/horarios"
                     android:layout_width="282dp"
@@ -140,97 +129,13 @@
                     android:ems="10"
                     android:hint="Seleccione Horario"
                   />
-
-
             </LinearLayout>
-
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:layout_marginTop="5dp"
-                    android:id="@+id/etime1"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:clickable="true"
-                    android:ems="10"
-                    android:focusable="false"
-                    android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
-                    android:hint="Abrir"
-                    android:inputType="datetime"
-                    android:paddingLeft="10dp" />
-                <EditText
-                    android:layout_marginTop="5dp"
-                    android:id="@+id/etime2"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="20dp"
-                    android:clickable="true"
-                    android:ems="10"
-                    android:drawableStart="@drawable/ic_close_black_24dp"
-                    android:focusable="false"
-                    android:hint="Cerrar"
-                    android:inputType="time"
-                    android:paddingLeft="10dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:layout_height="wrap_content">
-
-
-             <TextView
-                 android:layout_marginTop="5dp"
-                 android:layout_marginLeft="10dp"
-                 android:id="@+id/Fecha"
-                 android:textStyle="bold"
-                 android:textColor="#111111"
-                 android:text="Fecha de Inaguracion:"
-                 android:layout_width="280dp"
-                 android:layout_height="match_parent" />
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:drawableStart="@drawable/ic_date_range_black_24dp"
-                        android:id="@+id/tvDate"
-                        android:layout_centerHorizontal="true"
-                       />
-                <TextView
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold"
-                    android:textColor="#111111"
-                    android:text="Sitio Web:"
-                    android:layout_width="280dp"
-                    android:layout_height="match_parent" />
-
-                <EditText
-                    android:id="@+id/web"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="https://"
-                    android:drawableStart="@drawable/ic_web_black_24dp"
-                    android:textStyle="bold"
-                    />
-            </LinearLayout>
-        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
-            <Switch
+            <CheckBox
                 android:layout_marginTop="10dp"
                     android:id="@+id/selectlugar"
                     android:layout_width="100dp"
@@ -240,6 +145,13 @@
                     android:text="Mi Ubicación "
                     android:textColor="#111111" />
 
+
+            <ImageView
+                 android:id="@+id/idimagen"
+                android:layout_marginTop="10dp"
+                android:layout_width="100dp"
+                android:src="@drawable/img_base"
+                android:layout_height="100dp" />
         </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -249,11 +161,23 @@
                     android:id="@+id/createRes"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="90dp"
+                    android:layout_marginLeft="20dp"
+
                     android:layout_gravity="center_horizontal"
                     android:backgroundTint="@color/colorPrimary"
                     android:text="Registrar"
                     android:textColor="#ffffff" />
+                <Button
+                    android:id="@+id/foto"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="Registrar"
+                    android:textColor="#ffffff" />
+
 
 
             </LinearLayout>
