--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -175,7 +175,7 @@
 
                     android:layout_gravity="center_horizontal"
                     android:backgroundTint="@color/colorPrimary"
-                    android:text="Registrar"
+                    android:text="Foto"
                     android:textColor="#ffffff" />
 
 
