--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -25,13 +25,16 @@
                 android:textColor="#fff"
                 android:textSize="20dp"/>
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/signupFotoPerfil"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:src="@drawable/iconoperfi"/>
+                android:src="@drawable/iconoperfi"
+                app:civ_border_width="1dp"
+                app:civ_border_color="#FF000000"/>
 
         </LinearLayout>
 
