--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,24 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding ="5dp"
-
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-    tools:context=".View.HomeActivity"
-    >
 
-    <TextView
-        android:layout_width="wrap_content"
+    tools:context=".View.HomeActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_gravity="center"
-        android:text="Registro de Restaurantes"
-        android:textColor="#111111"
-        />
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,7 +32,7 @@
 
 
         <LinearLayout
-            android:paddingTop="15dp"
+           android:padding="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -43,27 +46,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-
-                    android:gravity="center_horizontal">
-
-
-                    <EditText
-                        android:id="@+id/nombre"
-                        android:layout_width="282dp"
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:drawableStart="@drawable/ic_store_black_24dp"
-                        android:ems="10"
-                        android:hint="nombre"
-                        android:inputType="textPersonName" />
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
 
-                </android.support.design.widget.TextInputLayout>
+                        android:gravity="center_horizontal">
+
+
+                        <EditText
+                            android:id="@+id/nombre"
+                            android:layout_width="282dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:drawableStart="@drawable/ic_store_black_24dp"
+                            android:ems="10"
+                            android:hint="nombre"
+                            android:inputType="textPersonName" />
+
+                    </android.support.design.widget.TextInputLayout>
 
                 </RelativeLayout>
                 <android.support.design.widget.TextInputLayout
@@ -117,7 +120,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                     />
+                    />
                 <EditText
                     android:id="@+id/horarios"
                     android:layout_width="282dp"
@@ -128,15 +131,15 @@
                     android:layout_marginTop="2dp"
                     android:ems="10"
                     android:hint="Seleccione Horario"
-                  />
+                    />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
-            <CheckBox
-                android:layout_marginTop="10dp"
+                <CheckBox
+                    android:layout_marginTop="10dp"
                     android:id="@+id/selectlugar"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
@@ -146,37 +149,29 @@
                     android:textColor="#111111" />
 
 
-            <ImageView
-                 android:id="@+id/idimagen"
-                android:layout_marginTop="10dp"
-                android:layout_width="100dp"
-                android:src="@drawable/img_base"
-                android:layout_height="100dp" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/idimagen"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="100dp"
+                    android:src="@drawable/img_base"
+                    android:layout_height="100dp" />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
+                android:layout_marginTop="5dp"
                 android:layout_height="wrap_content">
                 <Button
+
                     android:id="@+id/createRes"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-
+                    android:layout_marginStart="90dp"
                     android:layout_gravity="center_horizontal"
                     android:backgroundTint="@color/colorPrimary"
                     android:text="Registrar"
                     android:textColor="#ffffff" />
-                <Button
-                    android:id="@+id/foto"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
 
-                    android:layout_gravity="center_horizontal"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:text="Foto"
-                    android:textColor="#ffffff" />
 
 
 
@@ -189,5 +184,3 @@
 
 
 </LinearLayout>
-
-
