--- a/app/src/main/res/layout/extras.xml
+++ b/app/src/main/res/layout/extras.xml
@@ -58,7 +58,7 @@
                         android:gravity="center_horizontal">
 
                         <EditText
-                            android:id="@+id/entrada1"
+                            android:id="@+id/extras"
                             android:layout_width="282dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -88,7 +88,7 @@
                     android:gravity="center_horizontal">
 
                     <EditText
-                        android:id="@+id/sada"
+                        android:id="@+id/precioextras"
                         android:layout_width="282dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
@@ -100,26 +100,7 @@
                         android:inputType="number" />
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center_horizontal">
 
-                    <EditText
-                        android:id="@+id/tel"
-                        android:layout_width="282dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="166dp"
-                        android:ems="10"
-                        android:drawableStart="@drawable/ic_phone_black_24dp"
-
-                        android:hint="Cantidad"
-                        android:inputType="number" />
-                </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -148,20 +129,34 @@
                 android:layout_gravity="center"
                 android:orientation="vertical">
                 <ImageView
-                    android:id="@+id/dss"
+                    android:id="@+id/fotoextra"
                     android:layout_marginTop="5dp"
                     android:layout_width="100dp"
                     android:src="@drawable/img_base"
                     android:layout_height="100dp" />
             </LinearLayout>
+
             <LinearLayout
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
+                android:layout_marginTop="5dp"
                 android:layout_height="wrap_content">
+                <Button
+
+                    android:id="@+id/regisextras"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="145dp"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="Registrar"
+                    android:textColor="#ffffff" />
+
+
 
 
             </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
