--- a/app/src/main/res/layout/item_categoria.xml
+++ b/app/src/main/res/layout/item_categoria.xml
@@ -50,12 +50,13 @@
         </LinearLayout>
         <TextView
             android:layout_marginTop="5dp"
-            android:background="@drawable/precio"
+
             android:text="$ Precio"
             android:layout_width="0dp"
             android:textSize="15dp"
             android:id="@+id/pre"
-            android:textColor="#fff"
+            android:background="#111"
+            android:textColor="#111"
             android:layout_weight="2"
             android:layout_height="30dp"
             android:gravity="center"
