--- a/app/src/main/res/menu/activity_principal_drawer.xml
+++ b/app/src/main/res/menu/activity_principal_drawer.xml
@@ -17,6 +17,11 @@
             android:id="@+id/nav_exit"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="Cerrar sesión" />
+
+        <item
+            android:id="@+id/nav_Restau"
+            android:icon="@drawable/ic_restaurant_black_24dp"
+            android:title="Registro de Restaurante" />
     </group>
 
 </menu>
