--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,12 @@
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
-            android:layout_width="320dp"
+            android:layout_marginTop="80dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="80dp" />
+            android:textSize="15dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"/>
 
         <Button
             android:id="@+id/btnIngresFreed"
@@ -52,42 +54,43 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/id_tenerCuenta"
-            android:drawableStart="@drawable/ic_person_black_24dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="290dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="290dp"
+            android:drawableStart="@drawable/ic_person_black_24dp"
             android:text="Tienes una cuenta?"
-            android:textSize="16dp"
-            android:textColor="#fff"/>
+            android:textColor="#fff"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/id_newCuesta"
-            android:drawableStart="@drawable/ic_person_add_black_24dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crea una cuenta"
+            android:layout_gravity="center"
             android:layout_marginTop="12dp"
-            android:textSize="16dp"
-            android:textColor="#fff"/>
+            android:drawableStart="@drawable/ic_person_add_black_24dp"
+            android:text="Crea una cuenta"
+            android:textColor="#fff"
+            android:textSize="16dp" />
+
         <TextView
             android:id="@+id/id_help"
-            android:drawableStart="@drawable/ic_help_outline_black_24dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:drawableStart="@drawable/ic_help_outline_black_24dp"
             android:text="Ayuda?"
-            android:textSize="16dp"
-            android:textColor="#fff"/>
+            android:textColor="#fff"
+            android:textSize="16dp" />
 
     </LinearLayout>
 
