--- a/app/src/main/res/layout/activity_meu2.xml
+++ b/app/src/main/res/layout/activity_meu2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".View.MenuActivity">
+    tools:context=".View.Menu2">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -36,25 +36,19 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Entrada" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/tabItem1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Segundo" />
+                android:text="Comidas" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Extras " />
+                android:text="Bebidas" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bebidas" />
+                android:text="Postres" />
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
