--- a/app/src/main/res/layout/content_segundo_frgamen_lista.xml
+++ b/app/src/main/res/layout/content_segundo_frgamen_lista.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".View.RegistroMenu"
-    >
-
-
+    tools:context=".View.FragmentListasegundo"
+    tools:showIn="@layout/activity_segundo_frgamen_lista">
 
 </android.support.constraint.ConstraintLayout>
